--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+    />
     <title>4 Meses de Amor</title>
     <style>
       body,
@@ -14,10 +17,12 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        font-family: 'Arial', sans-serif;
+        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+          Helvetica, Arial, sans-serif;
         overflow: hidden;
         background: #00000000;
-        position: relative;
+        position: fixed;
+        -webkit-tap-highlight-color: transparent;
       }
 
       /* Fondo decorativo */
@@ -46,11 +51,11 @@
 
       .months-text {
         position: absolute;
-        top: 20px;
+        top: 15px;
         left: 0;
         width: 100%;
         text-align: center;
-        font-size: 24px;
+        font-size: 20px;
         color: #fd0033;
         font-weight: bold;
         text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.1);
@@ -65,26 +70,30 @@
         align-items: center;
         justify-content: center;
         perspective: 1000px;
-        gap: 20px;
+        gap: 15px;
         z-index: 1;
+        width: 100%;
+        padding: 20px;
+        box-sizing: border-box;
       }
 
       /* Sobre de corazón */
       .envelope {
         position: relative;
-        width: 450px;
-        height: 400px;
+        width: 300px;
+        height: 270px;
         background: #ff1a1a;
-        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         transform-style: preserve-3d;
         transform-origin: bottom;
         transition: all 0.7s ease-in-out;
         cursor: pointer;
         clip-path: path(
-          'M225,50 C300,0 450,70 450,180 C450,300 225,400 225,400 C225,400 0,300 0,180 C0,70 150,0 225,50 Z'
+          'M150,35 C200,0 300,50 300,120 C300,200 150,270 150,270 C150,270 0,200 0,120 C0,50 100,0 150,35 Z'
         );
         z-index: 10;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
+        touch-action: manipulation;
       }
 
       .envelope:before {
@@ -100,7 +109,7 @@
           rgba(255, 255, 255, 0) 50%
         );
         clip-path: path(
-          'M225,50 C300,0 450,70 450,180 C450,300 225,400 225,400 C225,400 0,300 0,180 C0,70 150,0 225,50 Z'
+          'M150,35 C200,0 300,50 300,120 C300,200 150,270 150,270 C150,270 0,200 0,120 C0,50 100,0 150,35 Z'
         );
       }
 
@@ -111,7 +120,7 @@
         left: 50%;
         transform: translateX(-50%);
         width: 80%;
-        height: 30px;
+        height: 20px;
         background: #e60000;
         clip-path: polygon(0 0, 50% 100%, 100% 0);
         z-index: 2;
@@ -120,7 +129,7 @@
       .envelope.open {
         transform: rotateX(-180deg);
         background: #e60000;
-        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
       }
 
       .front {
@@ -137,11 +146,11 @@
       .message {
         text-align: center;
         color: white;
-        font-size: 26px;
+        font-size: 18px;
         font-weight: bold;
-        text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
-        margin-top: 70px;
-        padding: 0 40px;
+        text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
+        margin-top: 50px;
+        padding: 0 20px;
         opacity: 1;
         transition: opacity 0.3s ease;
       }
@@ -152,17 +161,17 @@
 
       .stamp {
         position: absolute;
-        top: 40px;
-        right: 80px;
-        width: 70px;
-        height: 70px;
+        top: 25px;
+        right: 50px;
+        width: 50px;
+        height: 50px;
         background: white;
         display: flex;
         justify-content: center;
         align-items: center;
-        box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+        box-shadow: 0 3px 10px rgba(0, 0, 0, 0.15);
         animation: pulse 2s infinite;
-        border-radius: 8px;
+        border-radius: 5px;
         z-index: 3;
       }
 
@@ -179,7 +188,7 @@
       }
 
       .heart {
-        font-size: 40px;
+        font-size: 30px;
         color: #ff4b4b;
         animation: beat 1s infinite;
       }
@@ -189,7 +198,7 @@
           transform: scale(1);
         }
         50% {
-          transform: scale(1.3);
+          transform: scale(1.2);
         }
         100% {
           transform: scale(1);
@@ -204,37 +213,40 @@
         backface-visibility: hidden;
         transform: rotateX(180deg);
         clip-path: path(
-          'M225,50 C300,0 450,70 450,180 C450,300 225,400 225,400 C225,400 0,300 0,180 C0,70 150,0 225,50 Z'
+          'M150,35 C200,0 300,50 300,120 C300,200 150,270 150,270 C150,270 0,200 0,120 C0,50 100,0 150,35 Z'
         );
       }
 
       /* Carta rectangular */
       .letter {
         position: absolute;
-        width: 420px;
-        height: 500px;
+        width: 90%;
+        max-width: 350px;
+        height: 65vh;
+        max-height: 550px;
         background: rgba(255, 255, 255, 0.95);
-        box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
         transform: translateY(80%);
         opacity: 0;
         transition: all 1s ease-in-out;
         text-align: center;
-        border-radius: 10px;
-        padding: 40px;
+        border-radius: 8px;
+        padding: 20px;
         overflow-y: auto;
         z-index: 5;
         backdrop-filter: blur(5px);
         border: 1px solid rgba(255, 182, 193, 0.3);
+        -webkit-overflow-scrolling: touch;
       }
 
       .letter.show {
-        transform: translateY(-50px);
+        transform: translateY(-30px);
         opacity: 1;
       }
 
       .letter-content {
-        font-size: 17px;
-        line-height: 1.7;
+        font-size: 15px;
+        line-height: 1.6;
         color: #333;
         text-align: left;
       }
@@ -242,8 +254,12 @@
       .letter-content h2 {
         text-align: center;
         color: #ff1a1a;
-        font-size: 28px;
-        margin-bottom: 25px;
+        font-size: 22px;
+        margin-bottom: 15px;
+      }
+
+      .letter-content p {
+        margin-bottom: 15px;
       }
 
       .letter-hearts {
@@ -258,7 +274,7 @@
 
       .floating-heart {
         position: absolute;
-        font-size: 24px;
+        font-size: 18px;
         color: #ff6b88;
         animation: float 4s ease-in infinite;
         opacity: 0;
@@ -270,19 +286,19 @@
           opacity: 1;
         }
         100% {
-          transform: translateY(-150px) rotate(360deg);
+          transform: translateY(-100px) rotate(360deg);
           opacity: 0;
         }
       }
 
       /* Barra de desplazamiento */
       .letter::-webkit-scrollbar {
-        width: 6px;
+        width: 4px;
       }
 
       .letter::-webkit-scrollbar-thumb {
         background: #ff8080;
-        border-radius: 3px;
+        border-radius: 2px;
       }
 
       .letter::-webkit-scrollbar-track {
@@ -292,30 +308,30 @@
       /* Decoraciones adicionales */
       .corner-decoration {
         position: absolute;
-        width: 100px;
-        height: 100px;
+        width: 70px;
+        height: 70px;
         background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100"><path fill="%23ff6b88" opacity="0.2" d="M30,0 Q50,30 70,0 Q90,30 100,50 Q70,50 50,80 Q30,50 0,50 Q10,30 30,0 Z"/></svg>');
         background-repeat: no-repeat;
         z-index: -1;
       }
 
       .corner-1 {
-        top: 20px;
-        left: 20px;
+        top: 10px;
+        left: 10px;
       }
       .corner-2 {
-        top: 20px;
-        right: 20px;
+        top: 10px;
+        right: 10px;
         transform: scaleX(-1);
       }
       .corner-3 {
-        bottom: 20px;
-        left: 20px;
+        bottom: 10px;
+        left: 10px;
         transform: scaleY(-1);
       }
       .corner-4 {
-        bottom: 20px;
-        right: 20px;
+        bottom: 10px;
+        right: 10px;
         transform: scale(-1);
       }
     </style>
@@ -346,50 +362,50 @@
           <h2>4 Meses de Felicidad</h2>
 
           <p>
-            4 meses llenos de felicidad y amor , gracias por ser o intentar
-            sacar tu mejor version conmigo, por apoyarme y aguantarme te amo
-            muchisimo.
+            4 meses llenos de felicidad y amor, gracias por ser o intentar sacar
+            tu mejor versión conmigo, por apoyarme y aguantarme. Te amo
+            muchísimo.
           </p>
           <p>
-            Me sobran palabras para decirte lo feliz que me haces , para
-            agradecerte todo aquello que haces por mi , por volverme a regalar
-            esa felicidad , este amor que no tenia hace mucho tiempo. Y como te
-            lo dije en su momento estoy viviendo experiencias unicas que no
-            sabia que existian o que simplemente las merecia.
+            Me sobran palabras para decirte lo feliz que me haces, para
+            agradecerte todo aquello que haces por mí, por volverme a regalar
+            esa felicidad, este amor que no tenía hace mucho tiempo. Y como te
+            lo dije en su momento estoy viviendo experiencias únicas que no
+            sabía que existían o que simplemente las merecía.
           </p>
           <p>
-            Gracias por siempre estar para mi , por recargarme en mis dias malos
-            , por hacer que cada dia me esfuerze para ser una mejor persona ,
-            por motivarme en todas mis locuras , por ser tan empatica conmigo ,
-            apesar de que estas acostumbrada o una vida diferente a la mia y que
-            ahora me es dificil seguirte el ritmo aqui sigues y es algo que
-            valoro mucho y creeme que me esfuerzo mucho para lograr darte todo
+            Gracias por siempre estar para mí, por recargarme en mis días malos,
+            por hacer que cada día me esfuerce para ser una mejor persona, por
+            motivarme en todas mis locuras, por ser tan empática conmigo, a
+            pesar de que estás acostumbrada a una vida diferente a la mía y que
+            ahora me es difícil seguirte el ritmo aquí sigues y es algo que
+            valoro mucho y créeme que me esfuerzo mucho para lograr darte todo
             eso que te mereces.
           </p>
           <p>
-            Es una locura como haces desaperecer mis problemas o las cosas que
-            me estresan, eres mi escape , el sol en una tormenta y estoy seguro
-            que esto puede durar para siempre , eres una novia , hija ,
-            nutriologa increible y quiero que sepas que estoy muy orgulloso de
-            ti mor , aunque aveces se te cierre el mundo sabes que estare para
-            ti como tu lo has estado para mi.
+            Es una locura cómo haces desaparecer mis problemas o las cosas que
+            me estresan, eres mi escape, el sol en una tormenta y estoy seguro
+            que esto puede durar para siempre. Eres una novia, hija, nutrióloga
+            increíble y quiero que sepas que estoy muy orgulloso de ti mor,
+            aunque a veces se te cierre el mundo sabes que estaré para ti como
+            tú lo has estado para mí.
           </p>
           <p>
-            Apenas 4 meses amor y sigo amandote como el dia 1 , bueno cada vez
-            te amo mas jiji espero que sigamos compartiendo todo esto tan lindo
-            que dia a dia construimos. Te amo mucho lu.
+            Apenas 4 meses amor y sigo amándote como el día 1, bueno cada vez te
+            amo más jiji espero que sigamos compartiendo todo esto tan lindo que
+            día a día construimos. Te amo mucho lu.
           </p>
           <p
             style="
               text-align: center;
-              font-size: 20px;
+              font-size: 18px;
               font-weight: bold;
-              margin-top: 25px;
+              margin-top: 20px;
             "
           >
             Gracias por estos 4 meses maravillosos ❤️
           </p>
-          <p style="text-align: right; font-style: italic; margin-top: 30px">
+          <p style="text-align: right; font-style: italic; margin-top: 20px">
             Con todo mi amor<br />
           </p>
         </div>
@@ -405,18 +421,29 @@
       let isOpen = false;
 
       // Crear corazones de fondo
-      for (let i = 0; i < 15; i++) {
+      for (let i = 0; i < 12; i++) {
         const heart = document.createElement('div');
         heart.className = 'heart-bg';
         heart.innerHTML = '❤️';
         heart.style.left = Math.random() * 100 + '%';
-        heart.style.fontSize = 30 + Math.random() * 50 + 'px';
-        heart.style.animationDuration = 10 + Math.random() * 20 + 's';
-        heart.style.animationDelay = Math.random() * 5 + 's';
+        heart.style.fontSize = 20 + Math.random() * 30 + 'px';
+        heart.style.animationDuration = 10 + Math.random() * 15 + 's';
+        heart.style.animationDelay = Math.random() * 3 + 's';
         background.appendChild(heart);
       }
 
-      envelope.addEventListener('click', () => {
+      // Hacer el sobre responsive al toque
+      envelope.addEventListener('click', toggleEnvelope);
+      envelope.addEventListener(
+        'touchend',
+        function (e) {
+          e.preventDefault();
+          toggleEnvelope();
+        },
+        { passive: false }
+      );
+
+      function toggleEnvelope() {
         if (!isOpen) {
           envelope.classList.add('open');
           setTimeout(() => {
@@ -430,21 +457,21 @@
           isOpen = false;
           heartsContainer.innerHTML = '';
         }
-      });
+      }
 
       function createFloatingHearts() {
-        for (let i = 0; i < 20; i++) {
+        for (let i = 0; i < 15; i++) {
           setTimeout(() => {
             const heart = document.createElement('div');
             heart.className = 'floating-heart';
             heart.innerHTML = '❤️';
             heart.style.left = Math.random() * 100 + '%';
-            heart.style.animationDuration = 3 + Math.random() * 3 + 's';
-            heart.style.animationDelay = Math.random() * 2 + 's';
-            heart.style.fontSize = 20 + Math.random() * 15 + 'px';
+            heart.style.animationDuration = 2 + Math.random() * 2 + 's';
+            heart.style.animationDelay = Math.random() * 1 + 's';
+            heart.style.fontSize = 15 + Math.random() * 10 + 'px';
             heartsContainer.appendChild(heart);
 
-            setTimeout(() => heart.remove(), 4000);
+            setTimeout(() => heart.remove(), 3000);
           }, i * 150);
         }
       }
