--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
       <div class="envelope" id="envelope">
         <div class="front">
           <div class="message">
-            <p>Para la niña más bonita que existe</p>
+            <p>4  meses</p>
           </div>
           <div class="stamp">
             <div class="heart">❤️</div>
